# job-search

./: .gitignore  Makefile  README.md
.gemini/: settings.json
.github/agents/: code-review.agent.md  github.agent.md
.kiro/agents/: serverless-specialist.json
.kiro/settings/: mcp.json
.kiro/specs/regulatory-jobs-app/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
assets/: regulatory-jobs-architecture
backend/: .dockerignore  .gitignore  .samignore  README.md  buildspec.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  samconfig.toml  sample-job.json  template.yaml  test-env.json
backend-old/: pyproject.toml  requirements-dev.txt
backend-old/src/api/: __init__.py  job_service.py
backend-old/src/scraper/: __init__.py  lambda_handler.py  linkedin_scraper.py  specialized_scrapers.py  web_utils.py
backend-old/src/shared/: __init__.py  monitoring.py
backend/events/: event-put-item.json
backend/src/api/: auth.py  delete_by_id.py  get_all_jobs.py  get_by_id.py  lambda_handler.py  put_job.py
backend/src/apiclient/: adzuna.py  db_writer.py  lambda_handler.py  mapper.py
backend/src/handlers/: delete-by-id.mjs  delete_by_id.py  get-all-jobs.mjs  get-by-id.mjs  get_all_jobs.py  get_by_id.py  put-job.mjs  put_job.py
backend/src/scraper/: glassdoor_scraper.py  job_processor.py
backend/src/shared/: models.py  validation.py
backend/src/utils/: response.py
backend/tests/unit/: test_basic_functionality.py
backend/tests/unit/api/: __init__.py  test_delete_by_id.py  test_get_all_jobs.py  test_get_by_id.py  test_put_job.py
backend/tests/unit/handlers/: test_delete_by_id.py  test_get_all_jobs.py  test_get_by_id.py  test_put_job.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
infrastructure/: .gitignore  MONITORING.md  README.md  app.ts  cdk.json  deploy-config.sh  package-lock.json  package.json  tsconfig.json
infrastructure/scripts/: deploy-frontend-config.ts  get-api-key.ts  setup-log-insights.ts
(+27 files in other folders)
