[project]
name = "regulatory-jobs-backend"
version = "0.1.0"
description = "Serverless backend for regulatory jobs application"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "moto[dynamodb]>=4.2.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
    "boto3-stubs[dynamodb]>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "boto3-stubs[dynamodb]>=1.42.13",
    "flake8>=7.3.0",
    "moto[dynamodb]>=5.1.18",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
